--- a/docs/features/forgot-password.mdx
+++ b/docs/features/forgot-password.mdx
@@ -4,22 +4,27 @@ name: Forgot Password
 route: /forgot/
 ---
 
+<script src="webfont.js"></script>
+<script src="snap.svg-min.js"></script>
+<script src="underscore-min.js"></script>
+<script src="sequence-diagram-min.js"></script>
+
+
 # Forgot Password
 
 This is a POST request endpoint that allows for email reset of a password for a user in the database.
 
-In order to get email set up, please follow the linked instructions.
+## Setup
+In order to get email set up, please follow [these](https://developers.google.com/gmail/api/quickstart/nodejs) instructions.
 
-To issue a password reset email, you will send a POST request to `/forgotPassword/` with the following in the body:
+However, important note about setting up the code. Make sure to change the`SCOPES` variable in the `index.js` file mentioned in the setup instructions to the following.
 
-```json
-{
-    email: test@example.com,
-    security_answer: abc
-}
-``` 
+```javascript
+const SCOPES = ['https://www.googleapis.com/auth/gmail.modify'];
+```
+This will allow the API to send emails. Not doing this will result in emails being unable to be sent.
 
-Note that a JWT is not needed for this because the user does not need to have any form of authentication.
+You will then place the generated API keys in the appropriate config file. 
 
 
 
@@ -27,13 +32,22 @@ Note that a JWT is not needed for this because the user does not need to have an
 
 Get the security question stored with user - this is required if the field `securityQuestion` is set to true in the `config.yaml` file. 
 
-**URL** : `/getSecurityQuestion?email=test@example.com`
+**URL** : `/getSecurityQuestion`
 
-**Method** : `GET`
+**Method** : `POST`
 
 **Auth required** : NO
 
 **Permissions required** : None
+### Request 
+
+The following is an example request to the endpoint:
+
+```json
+{
+    email: test@example.com
+}
+``` 
 
 ### Response
 
@@ -41,11 +55,11 @@ Get the security question stored with user - this is required if the field `secu
 
 **Code** : `500` if there was an internal server error and the security question couldn't be retrieved, or the `securityQuestion` is not configured. 
 
-**Code** : `400` if the email requested did not exist in the database. 
+**Code** : `400` if the email requested did not exist in the database, or invalid arguments were specified to the API. 
 
 **Content examples**
 
-The API will return the following if the password was successfully reset:
+The API will return the following format if the password was successfully reset:
 
 ```json
 {
@@ -55,10 +69,14 @@ The API will return the following if the password was successfully reset:
 ```
 
 
-## Reset Password
+## Send Forgot Password Email
 
-Get the details of the currently Authenticated User along with basic
-subscription information.
+This endpoint allows for the sending of a PIN to the user by email.
+
+If security question is enabled in the config file, you must specify the answer to the security question retrieved
+from `/getSecurityQuestion` in order for the PIN to be
+successfully sent to the user.
+If Gmail is not enabled in the config file, this endpoint will return a `500` server error. 
 
 **URL** : `/forgotPassword`
 
@@ -85,10 +103,9 @@ Where `answer` is the answer to the security question previously fetched with `g
 
 **Code** : `200 OK` if all the fields match up and the password reset token could be issued successfully.
 
-**Code** : `500` if there was a server issue (mail server, DB connection, etc.)
+**Code** : `500` if there was a server issue (mail server, DB connection, etc.) or Gmail is not setup
 
-**Code** : `400` if there was an issue with the email being invalid.
-
+**Code** : `400` if there was an issue with provided arguments (ex. incorrect security answer or invalid arguments).
 **Content examples**
 
 If the email could successfully be sent, the API will return:
@@ -103,8 +120,13 @@ If the email could successfully be sent, the API will return:
 
 ## Verify Password Reset
 
-Get the details of the currently Authenticated User along with basic
-subscription information.
+Actually process the changed password. Returns the authenticated JWT if successful (user password has been changed in the database).
+
+If Gmail is enabled, the PIN that was emailed to the user must be specified and valid (i.e. not expired).
+
+If Gmail is not enabled, the user must send the answer to the security question (similar to `/forgotPassword`).
+
+If neither Gmail nor security question are enabled, the server will raise an exception that will be logged to the console, and the endpoint will not send a response.
 
 **URL** : `/resetPassword`
 
@@ -162,6 +184,7 @@ The API will return the following if the password was successfully reset:
 5. Makes a post request to the API which goes to the auth server 
     * form encoded body with email and security question answer
     * doesn't need a JWT, isn't authenticated
+    If Gmail is not enabled, skip to step 11 but sending a `/resetPassword` POST request with the security question rather than PIN.
 
 
 6. Seaches for the user in the database, if it exists and the security question matches, it generates a pin and current database
@@ -187,3 +210,6 @@ User gets logged in with the returned JWT.
 * Field with every user for specific questions
 * The dev team can choose questions, auth server handles everything. 
 * Config file can turn off this functionality
+
+
+<img src={require('./forgotpassword-diagram.png')} style={{maxWidth:800}}></img>
