added roles doucumentation and fixed logic a bit

--- a/docs/src/forgot-password.mdx
+++ b/docs/src/forgot-password.mdx
@@ -1,3 +1,10 @@
+---
+name: Forgot Password
+route: /forgot-password
+---
+
+# Forgot Password
+
 <img src={require('./forgotpassword-diagram.png')} style={{maxWidth:800}}></img>
 
 
