docs for profile changes finisehd, and verify updated

--- a/docs/main.mdx
+++ b/docs/main.mdx
@@ -14,7 +14,11 @@ route: /
 * Easy Deployment
 
 ## Registration Architecture
-<img src={require('./src/register.svg')} style={{maxWidth:800}}></img>
+<img src={require('./src/images/register.svg')} style={{maxWidth:800}}></img>
 
 ## Verification Architecture
-<img src={require('./src/verify.svg')} style={{maxWidth:800}}></img>
+<img src={require('./src/images/verify.svg')} style={{maxWidth:800}}></img>
+
+
+# Getting Started
+
