--- a/docs/src/forgot-password.mdx
+++ b/docs/src/forgot-password.mdx
@@ -5,7 +5,7 @@ route: /forgot-password
 
 # Forgot Password
 
-<img src={require('./forgotpassword-diagram.png')} style={{maxWidth:800}}></img>
+<img src={require('./images/forgotpassword-diagram.png')} style={{maxWidth:800}}></img>
 
 
 ## Get Security Question Endpoint
@@ -23,21 +23,7 @@ route: /forgot-password
 (3) If the user doesn't hhave a seucrity question, it says "No security question set"
 
 (4) It returns the user's security question. 
-
-
-## Register Endpoint
-
-| Endpoint | /getSecurityQuestion [POST] |
-| ------ | ----------- |
-| Body   | email, hashed password, amd role |
-| Response 200 | userid, role, and token |
-| Response 400 | error message |
-
-(1) If the request doesn't have a body with an email, password, and role, the request will return wit the error message "Please enter valid arguments for the fields provided."
-
-(2) Checks that there aren't any users with the same email, otherwise returns the error message ""User already exists. Please try again." 
-
-
+e
 
 ## Forgot Password
 
