--- a/docs/src/profile-changes.mdx
+++ b/docs/src/profile-changes.mdx
@@ -24,5 +24,19 @@ route: /profile-changes
 
 
 
-# Change password
+## Change Password Endpoint
+
+| Endpoint | / [POST] |
+| ------ | ----------- |
+| Body   | password, token |
+| Response 200 | success message |
+| Response 400 | error message |
+
+(1) If the request doesn't have a token or passwword, it sends the response "Malformed Request"
+
+(2) If the token isn't valid, it will return the error message "Invalid token"
+
+(3) If the user doesn't exist, it will return the error message "User doesn't exist"
+
+(4) The password is sucessfully reset in the model. It responds with the success message "Successful change of password!" and the new token.  
 
