--- a/docs/main.mdx
+++ b/docs/main.mdx
@@ -1,8 +1,24 @@
 ---
-name: Hello world
+name: Authentication Server
 route: /
 ---
 
-# Hello world!
 
-I'm a documentation page, using MDX, created using [docz](https://docz.site) and deployed with [ZEIT Now](https://zeit.co/now)!
+# Authentication Server
+
+
+
+* Independent Authentication Server
+* Easy Integration
+* Configurable features such as email verification, forgot password functionaity, roles heiarchy
+* Easy Deployment
+
+## Registration Architecture
+<img src={require('./src/images/register.svg')} style={{maxWidth:800}}></img>
+
+## Verification Architecture
+<img src={require('./src/images/verify.svg')} style={{maxWidth:800}}></img>
+
+
+# Getting Started
+
