--- a/docs/src/frontend-login.mdx
+++ b/docs/src/frontend-login.mdx
@@ -79,7 +79,7 @@ The code for the login component is comprised of a Card with inputs for text and
       </Card>
 ```
 
-This google login button that allows your user to sign in with google
+This is the google login button that allows your user to sign in with google
 ```
 <GoogleLogin
         className="btn sign-in-btn"
